<resources>
    <string name="app_name">MilkRecordKeeping</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_item">Add new milkman entry!</string>
    <string name="add_milkman">Add milkman</string>
    <string name="item_name_req">Name <font color='#FF0000'>*</font></string>
    <string name="mobile_req">Mobile <font color='#FF0000'>*</font></string>
    <string name="currency_symbol">Rs.</string>
    <string name="rate_req">Milk rate per/litre <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="record_milk">Record milk!</string>
    <string name="show_milk_data">Daily Milk Entries</string>
    <string name="add_milk_entry">Add milk delivery</string>
    <string name="quantity_req">Milk (in litres)</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="rate">Rate</string>
    <string name="quantity">Milk (in litres)</string>
    <string name="session">Milk Delivery Time</string>
    <string name="date_title">Delivery Date</string>
    <string name="date_req">Date of delivery</string>
    <string name="date">%1$d-%2$d-%3$d</string>
</resources>